== master

* enhancements
  * Add `blank_html` tanslation. (by github.com/nashby)
  * Add `show_for_class` configuration option. (by github.com/nashby)

* bug fix
  * Make show_for works with namespaced models. (by github.com/fabiokr)
  * Add `blank_content_class` to the attributes. (by
  github.com/blakehilscher). Closes #24.
  * Don't call `association.map` if association method is nil (by
  github.com/nashby). Closes #40.

== 0.2.5

* enhancements
  * Add a :value option for attribute (by github.com/ml-gt)
  * Add label_class, content_class, wrapper_class and content_class configuration options (by github.com/wojtekmach)

* bug fix
  * Fix problem with label => false and html_safe (label => false) (by github.com/nashby)

== 0.2.4

* enhancements
  * Do not add separator if label is not present (by github.com/eugenebolshakov)
  * Add method for output value only (by github.com/jenkek)

* bug fix
  * Fix empty labels to be html_safe (label => false) (by github.com/eugenebolshakov)

== 0.2.3

* enhancements
  * added :attributes method to generate all attributes given
  * update generator to use the new syntax show_for:install

* bug fix
  * fix numeric types

== 0.2.2

* bug fix
  * allow show_for to work with AR association proxies

* enhancements
  * improvements on html safe and output buffers

== 0.2.1

* enhancements
  * added label_proc
  * compatibility with latest Rails

== 0.2.0

* enhancements
  * Rails 3 compatibility

== 0.1.4

* bug fix
  * allow show_for to work with AR association proxies

== 0.1.3

* enhancements
  * allow builder to be given to show_for

* bugfix
  * Fix typo in yaml

== 0.1.2

* enhancements
  * allow f.attribute :nickname, :in => :profile as association shortcut

* deprecations
  * :method now becomes :using

== 0.1.1

* enhancements
  * HAML compatibility (by github.com/grimen)
  * blank_content support (by github.com/grimen)

== 0.1

* First release