@@ -4,4 +4,5 @@ gemspec
 
 gem "rake"
 gem "rdoc"
+gem 'railties'
 gem "ruby-debug", :platform => :mri_18
