@@ -5,3 +5,4 @@ gem "rdoc"
 gem 'show_for', :path => '..'
 gem 'activemodel', '~> 3.1.0'
 gem 'actionpack', '~> 3.1.0'
+gem 'railties', '~> 3.1.0'
