@@ -2,6 +2,7 @@ module ShowFor
   module Generators
     class InstallGenerator < Rails::Generators::Base
       desc "Copy ShowFor installation files"
+      class_option :template_engine, :desc => 'Template engine to be invoked (erb or haml or slim).'
       source_root File.expand_path('../templates', __FILE__)
 
       def copy_initializers
@@ -13,7 +14,8 @@ module ShowFor
       end
 
       def copy_generator_template
-        copy_file 'show.html.erb', 'lib/templates/erb/scaffold/show.html.erb'
+        engine = options[:template_engine]
+        copy_file "show.html.#{engine}", "lib/templates/#{engine}/scaffold/show.html.#{engine}"
       end
     end
   end
